--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,13 @@
     },
     "action": {
         "default_title": "Click to view a popup",
-        "default_popup": "options.html"
+        "default_popup": "options.html",
+        "default_icon": {
+            "128": "logo2.png"
+        }
+    },
+    "icons": {
+        "128": "logo2.png"
     },
     "permissions": [
         "storage"
